[package]
name = "dronecan"
description = "Dronecan library"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
categories = ["embedded", "no-std", "no-std::no-alloc", "aerospace::drones"]

[dependencies]
embedded-can = "0.4.1"
defmt = { version = "1.0.1", optional = true }
managed = { version = "0.8.0", default-features = false }

[features]
default = ["std"]
std = ["managed/std", "alloc"]
alloc = ["managed/alloc", "defmt?/alloc"]
defmt = ["dep:defmt"]
